--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mój Mały Edytor</title>
   </head>
-  <body>
-    <main>
-      <section>
-        <div>
-          <h1>Edytor MLU</h1>
-          <p>???</p>
+  <body class="body">
+    <main class="main">
+      <section class="section">
+        <div class="editor">
+          <h1 class="editor__tilte">Edytor MLU</h1>
+          <p class="editor__description">???</p>
         </div>
-        <img src="/src/assets/img/mlu__mascot.png" alt="???" title="??" />
+        <img
+          class="image image--special"
+          src="/src/assets/img/mlu__mascot.png"
+          alt="???"
+          title="??"
+        />
       </section>
-      <footer>
-        <img src="/src/assets/img/mlu__floor.png" alt="???" title="??" />
-      </footer>
     </main>
+    <footer class="footer">
+      <img
+        class="image"
+        src="/src/assets/img/mlu__floor.png"
+        alt="???"
+        title="??"
+      />
+    </footer>
   </body>
 </html>
