update conection with image

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,7 +16,7 @@
         <button class="editor-area__button">
           <img
             class="image"
-            src="src/assets/img/editor__save.png"
+            src="../assets/img/editor__save.png"
             alt="save icon"
             title="Save"
           />
@@ -37,7 +37,7 @@
         <button class="editor-area__button editor-area__button--load">
           <img
             class="image"
-            src="src/assets/img/editor__load.png"
+            src="../assets/img/editor__load.png"
             alt="load icon"
             title="Load"
           />
