--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,6 +32,7 @@
         </button>
         <textarea
           class="editor-area__textarea textarea--js"
+          aria-label="Write text to save it."
           placeholder="Write text to save it."
           maxlength="60"
         ></textarea>
@@ -51,7 +52,7 @@
       <p class="footer__description">
         Editor created by
         <a class="footer__link" href="https://github.com/kamilMalinowski"
-          >Kamil Malinowski</a
+          > Kamil Malinowski</a
         >
       </p>
     </footer>
