fix site image link

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <meta
       property="og:image"
-      content="https://www.behance.net/070c1aff-c6f6-4cab-ac30-43eb022e796f"
+      content="https://mir-s3-cdn-cf.behance.net/project_modules/disp/2bfdf790814117.5f29adb940047.png"
     />
     <title>My Little Editor</title>
   </head>
