--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
       A simple editor that saves and loads the text created as part of the ...WTF: Co ten Frontend... training."
     />
     <meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2bfdf790814117.5f29adb940047.png"/>
-    <link rel="icon" type="image/png" sizes="96x96" href="/src/assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../src/assets/icons/favicon-96x96.png">
 
     <title>My Little Editor</title>
   </head>
