--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image:secure_url" content="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2bfdf790814117.5f29adb940047.png"/>
     <meta property="og:image:width" content="400"/>
     <meta property="og:image:height" content="200"/>
-    <link rel="icon" type="image/png" sizes="96x96" href="src/assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://mir-s3-cdn-cf.behance.net/project_modules/disp/d0c5bd90814117.5f29b76a34b73.png">
 
     <title>My Little Editor</title>
   </head>
