--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,11 +8,22 @@
       content="
       A simple editor that saves and loads the text created as part of the ...WTF: Co ten Frontend... training."
     />
-    <meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2bfdf790814117.5f29adb940047.png"/>
-    <meta property="og:image:secure_url" content="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2bfdf790814117.5f29adb940047.png"/>
-    <meta property="og:image:width" content="400"/>
-    <meta property="og:image:height" content="200"/>
-    <link rel="icon" type="image/png" sizes="96x96" href="https://mir-s3-cdn-cf.behance.net/project_modules/disp/d0c5bd90814117.5f29b76a34b73.png">
+    <meta
+      property="og:image"
+      content="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2bfdf790814117.5f29adb940047.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2bfdf790814117.5f29adb940047.png"
+    />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="200" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="https://mir-s3-cdn-cf.behance.net/project_modules/disp/d0c5bd90814117.5f29b76a34b73.png"
+    />
 
     <title>My Little Editor</title>
   </head>
@@ -39,7 +50,7 @@
           class="editor-area__textarea textarea--js"
           aria-label="Write text to save it."
           placeholder="Write text to save it."
-          maxlength="60"
+          maxlength="30"
         ></textarea>
         <!--counter-->
         <div class="charCount charCount--js"></div>
