--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,45 +29,46 @@
 
   <!--BODY-->
   <body class="body">
-    <!--header-->
-    <header class="header">
-      <h1 class="header__title">My Little Editor</h1>
-    </header>
     <!--main-->
     <main class="main">
-      <form class="editor">
-        <button class="editor__button save--js">
+      <!--header-->
+      <header class="header">
+        <h1 class="header__title">My Little Editor</h1>
+      </header>
+      <!--editor-->
+      <div class="editor">
+        <button class="editor-click__button save--js">
           <img
-            class="editor__image"
+            class="editor-click__image"
             src="../assets/img/editor__save.png"
             alt="save icon"
             title="Save"
           />
           Save
         </button>
+        <form class="editor-form">
         <textarea
-          class="editor__textarea textarea--js"
+          class="editor-form__textarea textarea--js"
           aria-label="Write text to save it."
           placeholder="Write text to save it."
-          maxlength="30"
+          maxlength="60"
         ></textarea>
+      </form>
         <!--counter-->
-        <div class="editor__charCount charCount--js"></div>
-        <button class="editor__button editor__button--load load--js">
+        <span class="editor__charCount charCount--js"></span>
+        <button class="editor-click__button load--js">
           <img
-            class="editor__image"
+            class="editor-click__image"
             src="../assets/img/editor__load.png"
             alt="load icon"
             title="Load"
           />
           Load
         </button>
-      </form>
-    </main>
-    <!--footer-->
-    <footer class="footer">
-      <p class="footer__description">
-        Editor created by
+      </div>
+      <!--footer-->
+      <footer class="footer">
+        <p class="footer__description">Editor created by</p>
         <a
           target="_blank"
           rel="noopener noreferrer"
@@ -77,7 +78,7 @@
         >
           Kamil Malinowski</a
         >
-      </p>
-    </footer>
+      </footer>
+    </main>
   </body>
 </html>
