--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -37,6 +37,7 @@
       </header>
       <!--editor-->
       <div class="editor">
+        <!--save-->
         <button class="editor-click__button save--js">
           <img
             class="editor-click__image"
@@ -46,16 +47,20 @@
           />
           Save
         </button>
+        <!--save counter-->
+        <span class="editor-saveCount saveCount--js"></span>
+        <!--form-->
         <form class="editor-form">
-        <textarea
-          class="editor-form__textarea textarea--js"
-          aria-label="Write text to save it."
-          placeholder="Write text to save it."
-          maxlength="60"
-        ></textarea>
-      </form>
-        <!--counter-->
-        <span class="editor__charCount charCount--js"></span>
+          <textarea
+            class="editor-form__textarea textarea--js"
+            aria-label="Write text to save it."
+            placeholder="Write text to save it."
+            maxlength="100"
+          ></textarea>
+        </form>
+        <!--text counter-->
+        <span class="editor-charCount charCount--js"></span>
+        <!--load-->
         <button class="editor-click__button load--js">
           <img
             class="editor-click__image"
@@ -68,16 +73,18 @@
       </div>
       <!--footer-->
       <footer class="footer">
-        <p class="footer__description">Editor created by</p>
-        <a
-          target="_blank"
-          rel="noopener noreferrer"
-          class="footer__link"
-          href="https://github.com/kamilMalinowski"
-          title="Kamil Malinowski"
-        >
-          Kamil Malinowski</a
-        >
+        <p class="footer__description">
+          Editor created by
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            class="footer__link"
+            href="https://github.com/kamilMalinowski"
+            title="Kamil Malinowski"
+          >
+            Kamil Malinowski</a
+          >
+        </p>
       </footer>
     </main>
   </body>
