feat: create editor-count modules, add border-dance animation, update styles- final look

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -48,18 +48,18 @@
           Save
         </button>
         <!--save counter-->
-        <span class="editor-saveCount saveCount--js"></span>
+        <span class="editor-saveCount active-animatioon saveCount--js"></span>
         <!--form-->
         <form class="editor-form">
           <textarea
             class="editor-form__textarea textarea--js"
             aria-label="Write text to save it."
             placeholder="Write text to save it."
-            maxlength="100"
+            maxlength="200"
           ></textarea>
         </form>
         <!--text counter-->
-        <span class="editor-charCount charCount--js"></span>
+        <span class="editor-charCount active-animatioon charCount--js" ></span>
         <!--load-->
         <button class="editor-click__button load--js">
           <img
